packages/ui-library/src/css/layout/_charts.scss
.rocker-button--chart-rocker {
    $button-height: 28px;
    $button-width: 80px;
    $bg-color: $color-strong-neutral-90;
    $border-radius: $button-height / 2;
    $selected-color: #193967;
    $transition-timing: 0.2s;

    background-color: transparent;

    height: $button-height;
    border: none;
    border-radius: $border-radius;
    padding: 1px;

    label {
        z-index: $zindex__elevated;
        border: none;
        height: 100%;
        line-height: $button-height + 2;
        padding: 0;
        width: $button-width;
        color: $selected-color;
        font-size: 14px;
    }

    &:before {
        content: '';
        position: absolute;
        left: 0;
        right: 0;
        top: 0;
        bottom: 0;
        background-color: $bg-color;
        border-radius: $border-radius;
    }

    &.sel-0 label:nth-of-type(1),
    &.sel-1 label:nth-of-type(2),
    &.sel-2 label:nth-of-type(3),
    &.sel-3 label:nth-of-type(4) {
        @include transition($transition-timing color ease-out);

        background-color: transparent;
        color: $color-white;
    }

    &.sel-0,
    &.sel-1,
    &.sel-2,
    &.sel-3 {
        &:after {
            @include transition($transition-timing left ease-out);

            content: '';
            position: absolute;
            height: $button-height;
            width: $button-width;
            background-color: $selected-color;
            border-radius: $border-radius;
        }
    }

    @for $i from 0 through 3 {
        &.sel-#{$i} {
            &:after {
                left: 1px + $i*$button-width;
            }
        }
    }
}

.hero-chart__rocker {
    &:before {
        background-color: $color-white;
    }
}

.rocker-button--chart-rocker-small {
    $button-width: 64px;
    $button-height: 22px;
    @include font-pn-regular;
    font-size: 10px;
    height: $button-height;
    label {
        line-height: $button-height + 1;
        width: $button-width;
    }
    &.sel-0,
    &.sel-1,
    &.sel-2,
    &.sel-3 {
        &:after {

            content: '';
            position: absolute;
            height: $button-height;
            width: $button-width;
        }
    }

    @for $i from 0 through 3 {
        &.sel-#{$i} {
            &:after {
                left: 1px + $i*$button-width;
            }
        }
    }
}

.heatmap {
    $cell-size: 20px;

    display: inline-block;
    text-align: center;

    &__row {
        display: table-row;
    }

    .help-tooltip,
    &__xlabel,
    &__ylabel,
    &__spacer {
        display: table-cell;
        border-style: solid;
        border-width: 0 1px 1px 0;
    }

    .help-tooltip {
        box-sizing: border-box;
        padding-top: 12px;
        position: relative;
        height: $cell-size;
        width: $cell-size;
        border-color: $color-white;
    }

    &__xlabel,
    &__ylabel,
    &__spacer {
        font-size: 12px;
        text-align: center;
        line-height: 1em;
        border-color: $color-white;
        background-color: $color-white;
    }

    &__xlabel {
        padding: 0 0 5px;
    }

    &__ylabel {
        padding: 0 15px 0 0;
        line-height: $cell-size;
    }

    &__cell-color,
    .help-tooltip-target {
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
    }
}

.chart-tooltip {
    &--align-center {
        text-align: center;
    }

    &--align-left {
        text-align: left;
    }

    &--align-right {
        text-align: right;
    }

    &__label {
        font-size: 11px;
        line-height: 1em;

        &--horizontal {
            text-align: center;
        }
    }

    &__values {
        &--horizontal {
            display: inline-flex;
            justify-content: space-between;

            & > *:not(:last-child) {
                margin-right: $spacing-sm;
            }
        }
    }

    &__value-container {
        margin-bottom: $spacing-sm;
        &:last-child {
            margin-bottom: 0;
        }

        &--horizontal {
            margin-bottom: 0;
        }
    }

    &__value {
        font-size: 23px;
        line-height: 1em;
        @include font-pn-regular;
        margin: 3px 0 0;
    }

    &__subtitle {
        font-size: 11px;
        line-height: 1em;
    }
}

